--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,11 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #334;
+    color: red;
 }
 a:hover {
     text-decoration: underline;
+    
 }
 h1 {
     font-size: 3em;
