--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,11 @@ footer {
     font-size: .8em;
 }
 
+footer pi {
+    color : green;   
+}
+}
+
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
