--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,11 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-				</ul>
+	                <li><a href="mailto:pueblofranco@gmail.com">email</a></li>
+        		<li><a href="https://github.com/puebl0">github</a></li>
+        		<li><a href="https://www.facebook.com/PuebloFranco?ref=hl">facebook</a></li>
+        		<li><a href=" https://www.mixcloud.com/iraklisfrangos/">mixcloud</a></li>
+		        </ul>
 			</footer>
 		</body>
 	</html>
