--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
+		        	<li><a href="/about.html">About</a></li>
 	        		<li><a href="/videoclips.html">Video Clips</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+	        		<li><a href="/blog/index.html">Blog</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
